--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^5.0.2",
     "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
